src/objects/Projecten__c.object
<CustomObject>
    <fields>
        <fullName>Aantal_palletplaatsen__c</fullName>
        <label>Aantal palletplaatsen</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (klant)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actueel_aantal_palletplaatsen__c</fullName>
        <label>Actueel aantal palletplaatsen</label>
        <summarizedField>WWW__c.Actueel_aantal_palletplaatsen__c</summarizedField>
        <summaryForeignKey>WWW__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_amscheyving__c</fullName>
        <label>Project beschrijving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_omschrijving__c</fullName>
        <label>Project omschrijving</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Projectleider__c</fullName>
        <label>Projectleider</label>
        <picklist>
            <picklistValues>
                <fullName>Bas Brandenburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedrijfsbureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casper Ceulemans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Oussoren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duncan Bos Otten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frank van Schaik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geert Oussoren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imri Bron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan Desaunois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeroen van Altena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jessica Sietsema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marlon Borggreve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rick van der Laan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosanne Noordhoek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sander Ouwehand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ted Poelmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nader te bepalen</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Overzicht</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Projectleider__c</columns>
        <columns>Project_omschrijving__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Overzicht</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>Update_project_details</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_omschrijving__c</columns>
        <filterScope>Everything</filterScope>
        <label>Update project details</label>
    </listViews>
    <nameField>
        <label>Projectcode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projecten</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>